# rosdevday-presentation

catkin_ws/src/rrbot_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/rrbot_bringup/config/: joint_names.yaml  rrbot_controllers.yaml  rrbot_controllers_array.yaml  rrbot_controllers_custom.yaml
catkin_ws/src/rrbot_bringup/launch/: rrbot.launch  rrbot_hw_and_states.launch  rrbot_with_rrbot_controller.launch  rrbot_with_rrbot_controller_array.launch
catkin_ws/src/rrbot_controller/: CMakeLists.txt  package.xml  rrbot_controller.xml
catkin_ws/src/rrbot_controller/include/rrbot_controller/: rrbot_controller.hpp  rrbot_controller_array.hpp
catkin_ws/src/rrbot_controller/src/: rrbot_controller.cpp  rrbot_controller_array.cpp
catkin_ws/src/rrbot_description/: CMakeLists.txt  package.xml
catkin_ws/src/rrbot_description/launch/: view_robot.launch
catkin_ws/src/rrbot_description/rviz/: rrbot.rviz
catkin_ws/src/rrbot_description/urdf/: rrbot_robot.urdf.xacro
catkin_ws/src/rrbot_description/urdf/rrbot/: rrbot.urdf.xacro
catkin_ws/src/rrbot_hardware_interface/: CMakeLists.txt  package.xml
catkin_ws/src/rrbot_hardware_interface/include/rrbot_hardware_interface/: rrbot_hardware_interface.hpp
catkin_ws/src/rrbot_hardware_interface/src/: rrbot_hardware_interface.cpp  rrbot_hardware_interface_node.cpp
notebook_ws/: from-roscontrol-to-ros2control.ipynb
notebook_ws/.ipynb_checkpoints/: How_to_create_a_rosject-checkpoint.ipynb  default-checkpoint.ipynb
notebook_ws/images/logos/: header_logos.xcf
notebook_ws/notebook_examples/robotnik/: robotnik_presentation.ipynb
notebook_ws/notebook_examples/sony/: 3-UDSROS_Overview.ipynb
notebook_ws/notebook_examples/sony/.ipynb_checkpoints/: 1-Overview-checkpoint.ipynb  2-Aibo_Introductin-checkpoint.ipynb  4-UDSROS_HandsOn-checkpoint.ipynb
notebook_ws/notebook_examples/tiago/: Course_TiagoInstructionManual_Unit7.ipynb
ros2_ws/src/rrbot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rrbot_bringup/config/: rrbot_controllers.yaml  rrbot_controllers_array.yaml  rrbot_controllers_custom.yaml
ros2_ws/src/rrbot_bringup/launch/: rrbot.launch.py  rrbot_with_rrbot_controller.launch.py  rrbot_with_rrbot_controller_array.launch.py
ros2_ws/src/rrbot_controller/: CMakeLists.txt  package.xml  rrbot_controller.xml
ros2_ws/src/rrbot_controller/include/rrbot_controller/: rrbot_controller.hpp  rrbot_controller_array.hpp  visibility_control.h
ros2_ws/src/rrbot_controller/src/: rrbot_controller.cpp  rrbot_controller_array.cpp
ros2_ws/src/rrbot_controller/test/: test_load_rrbot_controller.cpp  test_rrbot_controller.cpp  test_rrbot_controller.hpp
ros2_ws/src/rrbot_description/: CMakeLists.txt  package.xml
ros2_ws/src/rrbot_description/launch/: view_robot.launch.py
ros2_ws/src/rrbot_description/rviz/: rrbot.rviz
ros2_ws/src/rrbot_description/urdf/: rrbot_robot.urdf.xacro
ros2_ws/src/rrbot_description/urdf/rrbot/: rrbot.gazebo.xacro  rrbot_robot.ros2_control.xacro
ros2_ws/src/rrbot_hardware_interface/: CMakeLists.txt  package.xml  rrbot_hardware_interface.xml
ros2_ws/src/rrbot_hardware_interface/include/rrbot_hardware_interface/: rrbot_hardware_interface.hpp  visibility_control.h
ros2_ws/src/rrbot_hardware_interface/src/: rrbot_hardware_interface.cpp
ros2_ws/src/rrbot_hardware_interface/test/: test_rrbot_hardware_interface.cpp
