<?xml version="1.0"?>
<package format="2">
  <name>rrbot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup files for exemplary RRBot robot and scenarios with it.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rrbot_hardware_interface</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
