<?xml version="1.0"?>
<package format="2">
  <name>rrbot_controller</name>
  <version>0.0.1</version>
  <description>Controller for exemplary RRBot robot.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/rrbot_controller.xml"/>

  </export>
</package>
