<?xml version="1.0"?>
<package format="2">
  <name>rrbot_description</name>
  <version>0.0.1</version>

  <description>Description files for the exemplary RRBot robot.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
